@@ -4,7 +4,7 @@
 <title>ipsvd - benefits</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">ipsvd</a><br>
 <hr>
 <h1>ipsvd - benefits</h1>
@@ -51,7 +51,7 @@ address (to identify clients through dynamic DNS names), see
 <hr>
 <a name="libdjbdns"><h3>Secure DNS client library</h3></a>
 The <i>ipsvd</i> programs use the
-<a href="http://smarden.org/pape/djb/">djbdns client library</a>
+<a href="https://smarden.org/pape/djb/">djbdns client library</a>
 to query the DNS.
 This DNS client library is known to be
 <a href="http://cr.yp.to/djbdns/res-disaster.html">secure</a> yet very
@@ -59,12 +59,12 @@ This DNS client library is known to be
 <hr>
 <a name="runit"><h3>Reliable service management and logging</h3></a>
 The daemons provided by the <i>ipsvd</i> package normally are run by a
-<a href="http://smarden.org/runit/runsv.8.html">runsv</a> supervisor
+<a href="https://smarden.org/runit/runsv.8.html">runsv</a> supervisor
 process, and started and managed through its control interface.
-The <a href="http://smarden.org/runit/">runit</a> packages provides
-<a href="http://smarden.org/runit/benefits.html#supervision">
+The <a href="https://smarden.org/runit/">runit</a> packages provides
+<a href="https://smarden.org/runit/benefits.html#supervision">
 service supervision</a> and a
-<a href="http://smarden.org/runit/benefits.html#log">
+<a href="https://smarden.org/runit/benefits.html#log">
 reliable logging facility</a>.
 <hr>
 <a name="smallcode"><h3>Small code size</h3></a>
