@@ -4,7 +4,7 @@
 <title>ipsvd - internet protocol service daemons</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a>
+<a href="https://smarden.org/pape/">G. Pape</a>
 <hr>
 <h1>ipsvd - internet protocol service daemons</h1>
 <hr>
@@ -38,8 +38,8 @@ hostname, they can run different programs, set a different environment, deny
 a connection, or set a per host concurrency limit.
 <p>
 Normally the <i>ipsv</i> daemons are run by a supervisor process, such as
-<a href="http://smarden.org/runit/runsv.8.html">runsv</a> from the
-<a href="http://smarden.org/runit/">runit</a> package, or
+<a href="https://smarden.org/runit/runsv.8.html">runsv</a> from the
+<a href="https://smarden.org/runit/">runit</a> package, or
 <a href="http://cr.yp.to/daemontools/supervise.html">supervise</a> from the
 <a href="http://cr.yp.to/daemontools.html">daemontools</a> package.
 <p>
