@@ -4,7 +4,7 @@
 <title>ipsvd - installation</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">ipsvd</a><br>
 <hr>
 <h1>ipsvd - installation</h1>
@@ -41,7 +41,7 @@ To report success:
  # mail pape-ipsvd-1.1.0@xxiv.smarden.org &lt;compile/sysdeps
 </pre>
 If you use <i>ipsvd</i> regularly, please
-<a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
+<a href="https://smarden.org/pape/#contribution">contribute</a> to the project.
 <p>
 Refer to the <a href="examples.html">examples</a> to learn how to set up
 services with <i>ipsvd</i>.
