@@ -6,7 +6,7 @@
 <title>ipsvd-cdb(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>ipsvd</a><hr>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>ipsvd</a><hr>
 
 <h2><a name='sect0'>Name</a></h2>
 ipsvd-cdb - create constant database from ipsvd instructions directory
@@ -26,7 +26,7 @@ an error message, and leaves <i>cdb</i> unchanged.
 <h2><a name='sect3'>See Also</a></h2>
 <i>ipsvd(7)</i>, <i>tcpsvd(8)</i>,
 <i>udpsvd(8)</i>, <i>ipsvd-instruct(5)</i> <p>
-<i>http://smarden.org/ipsvd/</i> 
+<i>https://smarden.org/ipsvd/</i> 
 <h2><a name='sect4'>Author</a></h2>
 Gerrit
 Pape &lt;pape@smarden.org&gt; <p>
