@@ -6,7 +6,7 @@
 <title>ipsvd-instruct(5) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>ipsvd</a><hr>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>ipsvd</a><hr>
 
 <h2><a name='sect0'>Name</a></h2>
 ipsvd-instruct - format of the <i>ipsvd(8)</i> instructions directory 
@@ -144,7 +144,7 @@ through the file <i>127.0.0.1</i> in the instructions directory. </dd>
 <h2><a name='sect5'>See Also</a></h2>
 <i>ipsvd(7)</i>,
 <i>ipsvd-cdb(8)</i>, <i>tcpsvd(8)</i>, <i>udpsvd(8)</i> <p>
-<i>http://smarden.org/ipsvd/</i>
+<i>https://smarden.org/ipsvd/</i>
 
 <h2><a name='sect6'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
