@@ -6,7 +6,7 @@
 <title>tcpsvd(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>ipsvd</a><hr>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>ipsvd</a><hr>
 
 <h2><a name='sect0'>Name</a></h2>
 tcpsvd - TCP/IP service daemon 
@@ -128,7 +128,7 @@ output. </dd>
 
 <h2><a name='sect4'>See Also</a></h2>
 <i>ipsvd(7)</i>, <i>udpsvd(8)</i>, <i>ipsvd-instruct(5)</i>, <i>ipsvd-cdb(8)</i> <p>
-<i>http://smarden.org/ipsvd/</i> 
+<i>https://smarden.org/ipsvd/</i> 
 <h2><a name='sect5'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
 
