@@ -6,7 +6,7 @@
 <title>udpsvd(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>ipsvd</a><hr>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>ipsvd</a><hr>
 
 <h2><a name='sect0'>Name</a></h2>
 udpsvd - UDP/IP service daemon 
@@ -118,7 +118,7 @@ verbose. Print more verbose messages to standard output. </dd>
 <h2><a name='sect5'>See Also</a></h2>
 <i>ipsvd(7)</i>,
 <i>tcpsvd(8)</i>, <i>ipsvd-instruct(5)</i>, <i>ipsvd-cdb(8)</i> <p>
-<i>http://smarden.org/ipsvd/</i>
+<i>https://smarden.org/ipsvd/</i>
 
 <h2><a name='sect6'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
