@@ -42,6 +42,6 @@ tcpsvd(8),
 udpsvd(8),
 ipsvd-instruct(5)
 .P
-http://smarden.org/ipsvd/
+https://smarden.org/ipsvd/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
