@@ -217,6 +217,6 @@ ipsvd-cdb(8),
 tcpsvd(8),
 udpsvd(8),
 .P
-http://smarden.org/ipsvd/
+https://smarden.org/ipsvd/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
