@@ -182,6 +182,6 @@ tcpsvd(8),
 ipsvd-instruct(5),
 ipsvd-cdb(8)
 .P
-http://smarden.org/ipsvd/
+https://smarden.org/ipsvd/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
